# ascii-snake

./: CMakeLists.txt  README.md  build.sh  setup.sh
src/: CMakeLists.txt  main.cpp
